# Ocular-Gesture-Modules

./: .gitignore  LICENSE  README.md  appunti.txt  blinkDetector.py  blink_detector.py  camera_config.py  designDoc.md  main.py  pyproject.toml  requirements.txt
diGemini/: blinkModule.py  main.py
mio/: blinkDetector.py  main.py
ogm/: __init__.py  blink_detector.py  camera_config.py
