[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ogm-vision"
version = "0.1.0"
authors = [
  { name="Valerio Di Tommaso", email="contact.me@valerioditommaso.dev" },
]
description = "Ocular Gesture Modules (OGM) - API per il rilevamento di gesture oculari."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "mediapipe",
    "opencv-python",
    "numpy",
    "scipy"
]

[tool.setuptools.packages.find]
include = ["ogm*"]

[tool.setuptools.package-data]
ogm = ["models/*.task"]
